--- a/test3_views/addStudent.html
+++ b/test3_views/addStudent.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 <h1> Add Sudent</h1>
-<!--<form action="/action_page.php"> -->
+<form action="/addStudent"> 
     <fieldset>
      <legend>Student Information:</legend>
      <label for="studentid">Student ID:</label>
@@ -25,10 +25,10 @@
 
      <label for="gpa">GPA:</label>
      <input type="text" id="gpa" name="gpa"><br><br>
-     <input type="submit" value="Submit">
+     <input type="submit" value="Add Student">
      <input type="submit" value="Reset">
     </fieldset>
-   <!--</form> -->
+   </form> 
   </body>
 
   </html>
